Improve the project totally