@@ -1,72 +1,101 @@
 package com.demo.reflection.demo1;
 
 import com.demo.collection_map.model.Product;
+import com.demo.oop.inherit.demo4_private.Person;
 import org.testng.annotations.Test;
 
 import java.lang.annotation.*;
-import java.lang.reflect.Constructor;
-import java.lang.reflect.Field;
-import java.lang.reflect.Method;
-import java.lang.reflect.Modifier;
+import java.lang.reflect.*;
+import java.util.Arrays;
 
 
 /**
- * 概念：
- * Java 反射机制作用在程序运行时，只要JVM装载过某个类，那么只要传入类名或者其他信息就能在运行时获取这个类的全部信息，并且操作这个类的属性或者方法
+ * 概念1：
+ * JVM装载过某个类后，会生成对应的Class对象，那么在程序运行时，就能获取这个类的全部信息，比如父接口，父类，全类名，属性，方法，构造器等，
+ * 并且能动态操作这个类的属性，方法，构造器，这被称之为Java的反射机制
  * <p>
- * 反射功能：
- * 对于任意一个类， 都能够知道这个类的完整结构包括父类、父接口、属性、方法等相关信息并且能够创建对象；
+ * 概念2：：
+ * 对于任意一个类， 都能够知道这个类的完整结构包括父类、父接口、属性、方法、构造器等相关信息并且能够创建对象；
  * 对于任意一个对象， 都能够调用它的任意一个方法和属性。
  * 这种动态的获取信息以及动态调用对象的方法的功能称为 java 的反射机制；
- * 简单来说，反射机制指的是程序在运行时能够获取自身的信息。在 Java 中，只要给定类的名字，就可以通过反射机制来获得类的所有信息。
+ * <p>
  * 反射机制很重要的一点就是“运行时”，其使得我们可以在程序运行时加载、探索以及使用编译期间完全未知的 .class 文件
  * <p>
- * <p>
- * 优点：
- * 反射增强了程序的灵活性，它也是许多框架设计的灵魂和基石
- * <p>
- * <p>
- * 缺点：
- * 反射调用方法时可以忽略权限检查，获取这个类的私有方法和属性，因此可能会破坏类的封装性而导致安全问题。
+ * 优点：反射增强了程序的灵活性，它也是许多框架设计的灵魂和基石
+ * 缺点：反射调用方法时可以忽略权限检查，获取这个类的私有方法和属性，因此可能会破坏类的封装性而导致安全问题，另外可能会降低程序的运行效率
  */
 
 
 public class ReflectionDemo {
     /**
      * 获取Class对象实例
-     * 字节码文件通过类加载器加载到内存后，在堆内存中就会创建一个Class对象，一个Class对象对应的是一个加载到JVM中的一个.class字节码文件，代表一个类型
-     * 同一个程序在一次运行过程中，只会被加载一次，不论通过哪种方式获得，都是对应着同一个Class对象
+     * .class字节码文件通过类加载器加载到内存后，在堆内存中就会创建一个Class对象，一个Class对象对应的是一个加载到JVM中的一个.class字节码文件，代表一个类型:Person.class<---->Class<Person><---->Person
+     * 同一个类在运行过程中，只会被加载一次，不论通过哪种方式获得，不论创建多少个对象，都是对应着同一个Class对象
+     * 不能直接创建Class的实例对象，因为Class类的构造方法是私有的，只有jvm可以去创建。
      * Class对象就像一面镜子一样，通过Class对象可以获取这个类的完整结构包括父类、父接口、属性、方法等相关信息并且能够创建对象，访问属性方法，所以形象的称之为反射
      *
      * @throws ClassNotFoundException
      */
     @Test
-    public void test() throws ClassNotFoundException {
-        //方式1：通过对象创建Class实例
-        Class clz = new Apples().getClass();
-        //方式2：通过类名创建Class实例
-        Class clz2 = Apples.class;//常用于参数传递场景
-        //方式3：通过全类名创建Class实例，要求该类在classpath下
-        Class clz3 = Class.forName("com.demo.reflection.demo1.Apples");
+    public void getClassTest() throws ClassNotFoundException {
+        //方式1：通过对象创建Class实例,常用于有对象实例的场景
+        Class clz1 = new Apples().getClass();
+        Class clz1_2 = new Apples().getClass();
 
-        //方式4：通过app类加载器获取Class对象，要求该类在classpath下
+        //方式2：通过类名创建Class实例，常用于参数传递场景
+        Class<Apples> clz2 = Apples.class;//常用于参数传递场景
+
+        //方式3：通过全类名创建Class实例，要求该类在classpath下，常用于读取配置文件场景
+        Class<?> clz3 = Class.forName("com.demo.reflection.demo1.Apples");
+
+        //方式4：通过系统类加载器(加载用户类路径下的类)获取Class对象，要求该类在classpath下
         ClassLoader classLoader = ClassLoader.getSystemClassLoader();
-        Class clz4 = classLoader.loadClass("com.demo.reflection.demo1.Apples");
-        System.out.println(clz == clz2 && clz2 == clz3 && clz3 == clz4);
+        Class<?> clz4 = classLoader.loadClass("com.demo.reflection.demo1.Apples");
 
+        //这里获取到的也是系统类加载器(加载用户类路径下的类)
+        ClassLoader classLoader2 = this.getClass().getClassLoader();
+        Class<?> clz5 = classLoader.loadClass("com.demo.reflection.demo1.Apples");
 
-        //基本数据类型可通过 Class cls=基本数据类型.class 获取对应的Class对象
-        Class<Double> doubleClass = double.class;  //泛型类型自动装箱
+        //无论如何获取Class<Apples>对象，无论生成多少个Apples对象，Class<Apples>对象在堆内存中只有一个，对应着Apples.class文件
+        System.out.println(clz1 == clz1_2 && clz1_2 == clz2 && clz2 == clz3 && clz3 == clz4 && clz4 == clz5);
 
         //数组也有Class对象
         Product[] products = new Product[10];
-        Class<Product[]> productClz = Product[].class;
+        Class productClz = products.getClass();//通过对象创建Class实例
+        Class productClz2 = new Product[10].getClass();//通过对象创建Class实例
+        Class<Product[]> productClz3 = Product[].class;//通过类名创建Class实例
+        System.out.println(productClz == productClz2 && productClz2 == productClz3);
 
-        //Thread.State是枚举类，也有CLass对象
+        //基本数据类型可通过 Class cls=基本数据类型.class 获取对应的Class对象
+        Class<Double> doubleClass = double.class;  //泛型类型自动装箱
+        Class<Character> characterClass = char.class;
+
+        //Thread.State是枚举类，也有CLass对象（枚举是一种类）x
         Class<Thread.State> stateClass = Thread.State.class;
 
         //void也有CLass对象
         Class<Void> voidClass = void.class;
+
+        //对于基本数据类型的包装类，还可以采用TYPE来获取对应的基本数据类型的Class实例： 包装类.TYPE
+        Class<Integer> type = Integer.TYPE;
+        Class<Character> type1 = Character.TYPE;
+        Class<Boolean> type2 = Boolean.TYPE;
+
+        //注解是一种接口,也有CLass对象
+        Class<Override> overrideClass = Override.class;
+    }
+
+
+    /**
+     * getClass(): Returns the runtime class of this Object.
+     */
+    @Test
+    public void getClassTest2() {
+        Object obj = new Person();
+        Person person = new Person();
+        System.out.println(obj.getClass().getName());
+        System.out.println(person.getClass().getName());
+        System.out.println(obj.getClass() == person.getClass());//两者的运行时类型一致
     }
 
 
@@ -75,18 +104,19 @@ public class ReflectionDemo {
      */
     @Test
     public void test2() {
+        System.out.println("直接父接口：");
         Class<Apples> clz = Apples.class;
         Class<?>[] interfaces = clz.getInterfaces();
-
-        System.out.println("父接口：");
         for (int i = 0; i < interfaces.length; i++) {
             System.out.println(interfaces[i].getName());
         }
         System.out.println();
 
-        System.out.println("父类名：");
-        Class<? super Apples> superclass = clz.getSuperclass();
-        System.out.println(superclass.getName());//制剂父类
+        System.out.println("直接父类：");
+        Class superclass = clz.getSuperclass();
+        Type superclass2 = clz.getGenericSuperclass();
+        System.out.println(superclass.getName());//直接父类
+        System.out.println(superclass2.getTypeName());//直接父类
 
         System.out.println();
         System.out.println("包名：");
@@ -103,25 +133,31 @@ public class ReflectionDemo {
     @Test
     public void testConstructor() throws Exception {
 
-        System.out.println("获取父子类所有public构造器: ");
+        System.out.println("获取当前类所有public构造器: ");
         Class clz = Apples.class;
         Constructor[] constructors = clz.getConstructors();
         for (Constructor constructor : constructors) {
             System.out.println(constructor);
         }
 
-        System.out.println("\n获取本类所有权限的构造器: ");
+        System.out.println("\n获取当前类所有权限的构造器: ");
         Constructor[] declaredConstructors = clz.getDeclaredConstructors();
         for (Constructor declaredConstructor : declaredConstructors) {
             System.out.println(declaredConstructor);
         }
-
 
         System.out.println("\n获取指定的的构造器: ");
         Constructor declaredConstructor = clz.getDeclaredConstructor();
         Constructor declaredConstructor2 = clz.getDeclaredConstructor(String.class);
         System.out.println(declaredConstructor);
         System.out.println(declaredConstructor2);
+
+        System.out.println("\n获取父类所有public构造器: ");
+        Class superclass = clz.getSuperclass();
+        Constructor[] constructors2 = superclass.getConstructors();
+        for (Constructor constructor : constructors2) {
+            System.out.println(constructor);
+        }
     }
 
 
@@ -149,7 +185,6 @@ public class ReflectionDemo {
         Class[] parameterTypes = declaredConstructor.getParameterTypes();
         for (Class parameterType : parameterTypes) {
             System.out.println(parameterType.getSimpleName());
-
         }
     }
 
@@ -161,7 +196,6 @@ public class ReflectionDemo {
      */
     @Test
     public void testConstructor3() throws Exception {
-
         Class clz = Apples.class;
 
         //通过空参构造器创建对象
@@ -176,12 +210,52 @@ public class ReflectionDemo {
         Constructor<Apples> constructor2 = clz.getConstructor();
         Apples apples3 = constructor2.newInstance();
 
-
         //获取私有构造器要使用getDeclaredConstructor，调用时候要设置下权限
         Constructor<Apples> constructor3 = clz.getDeclaredConstructor(String.class);
-        //Apples apples4 = constructor3.newInstance();//运行时候会报IllegalAccessException
-        constructor3.setAccessible(true);
+        //Apples apples4 = constructor3.newInstance("apple");//运行时候会报IllegalAccessException
+        constructor3.setAccessible(true);//可以通过setAccessible方法将可访问标志设为true（默认为false），会关闭访问检查。这样即使是私有的属性、方法或构造函数，也可以访问。
         Apples apples4 = constructor3.newInstance("apple");
+    }
+
+
+    /**
+     * 通过反射创建数组
+     */
+    @Test
+    public void testConstructor4() {
+        Class<Integer> clazz = Integer.class;
+        Integer[] array = (Integer[]) Array.newInstance(clazz, 10);
+        for (int i = 0; i < 10; i++) {
+            array[i] = i;
+        }
+        System.out.println(Arrays.toString(array));
+    }
+
+    /**
+     * 获取数组元素类型
+     */
+    @Test
+    public void testArrayComponentType() {
+        Class<?> componentType = new Apples[10].getClass().getComponentType();
+        System.out.println(componentType);
+        System.out.println(componentType.getName());
+    }
+
+
+    private static Object resizeArray(Object oldArray, int newSize) {
+        //获取数组oldArray的长度
+        int oldSize = Array.getLength(oldArray);
+        //获取数组oldArray的元素类型
+        Class elementType = oldArray.getClass().getComponentType();
+        //实例一个新的数组 类型和oldArray的一样 长度参数传入的newSize
+        Object newArray = Array.newInstance(elementType, newSize);
+        //得到新数组newArray 和oldArray两个中长度最短的，并把长度返回给preserveLength
+        int preserveLength = Math.min(oldSize, newSize);
+        //数组内容复制
+        if (preserveLength > 0) {
+            System.arraycopy(oldArray, 0, newArray, 0, preserveLength);
+        }
+        return newArray;
     }
 
 
@@ -208,7 +282,6 @@ public class ReflectionDemo {
         for (Field declaredField : declaredFields) {
             System.out.print(declaredField.getName() + " ");
         }
-
 
         //获取特定属性
         System.out.println("\n" + "获取特定属性:");
@@ -237,20 +310,19 @@ public class ReflectionDemo {
     }
 
 
-
     /**
      * 反射操作属性
      *
      * @throws NoSuchFieldException
      */
     @Test
-    public void testField3() throws NoSuchFieldException, InstantiationException, IllegalAccessException {
+    public void testField3() throws NoSuchFieldException, InstantiationException, IllegalAccessException, NoSuchMethodException, InvocationTargetException {
         //getFields()只能获取public的属性，包括从父类继承过来的public属性
         Class<Apples> clz = Apples.class;
-        Apples apples = clz.newInstance();
+        Apples apples = clz.getConstructor().newInstance();
         //获取本类所有权限的属性，不包括从父类继承过来的属性
         Field nameField = clz.getField("name");
-        nameField.set(apples,"hongfushi");
+        nameField.set(apples, "hongfushi");
         Object name = nameField.get(apples);
         System.out.println(name);
     }
@@ -281,10 +353,8 @@ public class ReflectionDemo {
 
         //获取特定方法
         System.out.println("\n获取指定方法:");
-        Method setArea = clz.getMethod("setArea",String.class);
+        Method setArea = clz.getMethod("setArea", String.class);
         System.out.println(setArea.getName());
-
-
     }
 
 
@@ -296,7 +366,6 @@ public class ReflectionDemo {
     @Test
     public void testMethod2() throws Exception {
         Class clz = Apples.class;
-        Apples a = (Apples) clz.newInstance();
 
         //获取方法修饰符、返回值、方法名
         System.out.println("\n" + "\n" + "获取方法修饰符、返回值、方法名：");
@@ -349,7 +418,7 @@ public class ReflectionDemo {
         Method getName = clz.getDeclaredMethod("getName");
         //getName虽然是private,如果是在另一个类中调用getName ,需要如下处理
         getName.setAccessible(true);
-        String name = (String)getName.invoke(a);
+        String name = (String) getName.invoke(a);
         System.out.println(name);
 
     }
@@ -359,8 +428,8 @@ public class ReflectionDemo {
      * 获取类注解
      */
     @Test
-    public void test3x() {
-        Class clz = Apples.class;
+    public void testClassAnnotation() {
+        Class<Apples> clz = Apples.class;
         Annotation[] annotations = clz.getAnnotations();
         for (Annotation annotation : annotations) {
             System.out.println(annotation);
@@ -368,7 +437,7 @@ public class ReflectionDemo {
 
         System.out.println();
         Annotation annotation = clz.getAnnotation(Color.class);
-        Color color = (Color) clz.getAnnotation(Color.class);
+        Color color = clz.getAnnotation(Color.class);
         System.out.println(annotation);
         System.out.println(color);
     }
